2014-09-15 Added "Custom toolbar" property to Paragraph module
2014-09-15 Fixed Image Viewer issue in mexican lesson
2014-09-15 Fixed eKeyboard issues on Android devices
2014-09-12 IWB Toolbar: fixed preview
2014-09-12 [Ordering] Added new property: Even width for all elements, to avoid problems with images in Safari
2014-09-12 IWB Toolbar: now you can hide unnecessary buttons
2014-09-12 Fixed problem with loading progress circle for other views than embed
2014-09-12 Fixed problem with propagation in IWB Toolbar module
2014-09-11 Changed time format in note in IWB Toolbar module
2014-09-11 Fixed problem with command stop on iPad in Text Audio module
2014-09-11 Fixed problem with double lines on Android 4.1.2 in Connection module
2014-09-11 Fixed drawing issue on Android 4.1.2 native browser in ShapeTracing module
2014-09-10 Changed Default Confirmation Alert Box to Custom in IWB Toolbar module
2014-09-10 Fixed drawing issue on IE 11 mobile browser in ShapeTracing addon
2014-09-10 Fixed drawing issue on IE 11 mobile browser
2014-09-10 Fixed drawing issue on Android 4.1.2 native browser
2014-09-10 Fixed reaction on Check button in Show Answers module and reaction on Show Answers in True False module
2014-09-10 Added show, hide and isVisible commands to Paragraph module
2014-09-08 Fixed isAttempted method in Coloring module
2014-09-08 Fixed performance issue in Drawing addon
2014-09-08 Added enabling letters selection in Text Selection module
2014-09-05 Fixed deselecting text after completion of audio
2014-09-04 Fixed calculating page and lesson scores in PlayerUtils
2014-09-04 Writing Calculation: fixed error in console.log
2014-09-04 IWB Toolbar: now you can change tooltip text in css styles
2014-09-04 Fixed problem with model validation in Connection module
2014-09-03 Fixed IWB Toolbar position from the left side of the screen
2014-09-03 Fixed lesson loading image position